<?xml version="1.2"?>
<package format="2">
  <name>mkz_bywire</name>
  <version>0.1.2</version>
  <description>The mkz_bywire package</description>
 
  <maintainer email="shaobxu@gmail.com">shaobing</maintainer>
  <license>To Commercialize</license>
  <author email="shaobxu@gmail.com">shaobing</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend> 
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>mcity_msg</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
 
  <exec_depend>roslaunch</exec_depend>
  
</package>

